--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
     "axios": "^1.3.6",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22",
+    "telegraf": "^4.12.2"
   },
   "scripts": {
-    "dev": "node index"
+    "dev": "nodemon index"
   }
 }
